# wholehead-cocktail-party-fnirs

./: .gitignore  README.md  environment-win.lock.yml  environment.yml  pyproject.toml
cedalion/: process_spatial_attention_bids.py  pyproject.toml  pysnirf2.log.script.py
cedalion/scripts/: compare_group_roi_importance.py  compare_group_roi_importance_mean_dprime.py  debug_ang.py  debug_compare.py  extract_angular_gyrus.py  extract_just_mni.py  fix_nirs_filenames.py  gen_stimuli_main_sudan.m  mni_report.py  mni_report_histogram.py  mni_spread.py
config/: paths.yml  run.yml
env_snapshot/: conda_env_from_history.yml  conda_env_full.yml  conda_env_no_builds.yml  pip_freeze.txt  pip_version.txt  python_full.txt
scripts/classification/: classify_rf_all_channels.py  classify_rf_angular_gyrus.py  permutation_test_rf.py
scripts/figure2_hemodynamic_response/: group_level_brodmann_grid.py  plot_rois_scalp_2d.py
scripts/figure3_accuracy_over_time/: plot_accuracy_over_time.py
scripts/figure4_accuracy_scatter_latency/: make_accuracy_summary_table.py  scatter_covert.py  scatter_overt_with_latency_CI.py
scripts/figure5_pc_contributions/: analyze_pc_contributions_histogram.py  plot_channel_contributions_scalp.py
scripts/figure6_overt_vs_covert_scatter/: pairwise_accuracy_overt_vs_covert.py  scatter_overt_vs_covert_LR_top5.py
whichscript/: CITATION.cff  README.md  example_analysis.py  pyproject.toml
whichscript/tests/: test_auto_logging.py
whichscript/whichscript/: __init__.py  archiver.py  localmod_demo.py  open_script.py  tracker.py
(+33 files in other folders)
